[metadata]
# replace with your username:
name = rezchaincsv
version = 0.0.3
author = Ricardo Galli
author_email = ricardo.galli@webbeds.com
description = An interface to Rezchain CSV API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Webjet/RezchainCSV
project_urls =
    Bug Tracker = https://github.com/Webjet/RezchainCSV/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License 2.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src